--- a/css/style.less
+++ b/css/style.less
@@ -14,7 +14,7 @@ body, html {
              color: #fff;
         }
          .navbar-light .navbar-toggler-icon {
-            background-image: url(../images/burger.png) !important;
+            background-image: url("../images/burger.png") !important;
         }
          .navbar {
              background-color: rgba(0,0,0,0.5);
@@ -98,7 +98,7 @@ body, html {
         }
     }
     main {
-        background-image: url(../images/1.jpg);
+        background-image: url("../images/1.jpg");
          background-size: cover;
          background-attachment: fixed;
          background-position: center;
