--- a/css/style.less
+++ b/css/style.less
@@ -98,7 +98,7 @@ body, html {
         }
     }
     main {
-        background-image: url("../images/1.jpg");
+        background-image: url("../images/header.jpg");
          background-size: cover;
          background-attachment: fixed;
          background-position: center;
