--- a/css/style.less
+++ b/css/style.less
@@ -20,6 +20,7 @@ body, html {
              background-color: rgba(0,0,0,0.5);
              text-align: center;
              min-height: 81px;
+             padding: 0;
          }
          button:focus {
              outline: none;
