--- a/css/style.less
+++ b/css/style.less
@@ -20,7 +20,7 @@ body, html {
              background-color: rgba(0,0,0,0.5);
              text-align: center;
              min-height: 81px;
-             padding: 0;
+             padding: 0 !important;
          }
          button:focus {
              outline: none;
